Fix character spacing again

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -65,6 +65,7 @@
 
 /* Individual character */
 #banner span {
+  display: inline-block;
   width: 8px;
   cursor: none;
 }
